# linuxpal

./: .gitignore  Cargo.toml  IDEAS.md  README.md  install.sh  linuxpal-toggle
scripts/: roam-doctor.sh
src/: bubble.rs  config.rs  context.rs  control.rs  ipc.rs  llm.rs  main.rs  menu.rs  morning.rs  player.rs  renderer.rs  sprites.rs
