[package]
name = "linuxpal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linuxpal"
path = "src/main.rs"

[dependencies]
# Wayland client + layer-shell
wayland-client = "0.31"
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# Pixel drawing
tiny-skia = "0.11"

# Image loading (PNG → pixels)
image = { version = "0.25", default-features = false, features = ["png"] }

# Async runtime for IPC
tokio = { version = "1", features = ["full"] }

# Local LLM (Ollama) HTTP client
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"
rustix = { version = "0.38", features = ["event"] }
